lab 4/ml-inference-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-inference-service
  namespace: default
  labels:
    app: ml-inference
spec:
  selector:
    app: ml-inference
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
